PLC.css
*{
    margin: 0;
    padding: 0;
    position: relative;
}
body{
    width: 100%;
    height: 100vh;
    background-color:rgba(231, 229, 226, 0.877);
}
.main{
    width: 100%;
    height: 50px;
    background-color: black;
    display: flex;
    color: white;
}
.movingtext{
    
    width: 65%;
    background-color: black;
    overflow: hidden;
    border: 1px solid black;
}
.actualtext{
     text-align: center; 
    margin-top: 10px;
    white-space: nowrap;
    position: relative;
    animation: moveText 10s linear infinite;
    
    font-size: larger;
    
} 

@keyframes moveText{
    0%{
        transform: translateX(-100%);
        
    }
    100%{
        transform: translateX(100%);
        
    }
}
.list{
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 25%;
    height: 25%;

}
.elements{
    width: 35%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.PLC{
    width: 100%;
    height: 15%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.maindropdowns{
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;

}
.dropdowns{
    display: block;
    width: 25%;
    height: 100%;
    color:black;  
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: larger;
    font-weight: bolder;
    
}
.fa-solid{
    margin-left: 5px;
    font-size: smaller;
    margin-top: 5px;
}
.backgroundimg{
    height: 70%;
    width: 100%;
    background-image: url("./download.jfif");
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    overflow: hidden;
}
.verticaltext{
    margin-top: 100px;
    margin-left: 40px; 
    color: white;
    text-decoration: underline;
    font-size: 50px;
    opacity: 0;
    animation: slideup 3s ease-out forwards;
}
@keyframes slideup{
    0%{
        transform: translateY(100%);
        opacity: 0;
    }
    100%{
        transform: translateY(0);
        opacity: 1;
    }
}
.extratext{
    margin-top: 10px;
    margin-left: 40px; 
    color: white;
    text-decoration: underline;
    font-size: 20px;
    opacity: 0;
    animation: hello 3s ease-out forwards;
}
@keyframes hello {
    0%{
        transform: translateX(-30%);
        opacity: 0;
    }
    100%{
        transform: translateX(0);
        opacity: 1;
    }
}
.picedit{
    width: 100%;
    height: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: space-evenly;
}
.box{
    width: 20%;
    height: 300px;
    /* background-color: white; */
    align-self: center;    
    background: transparent;
    animation: slideup 3s ease-out forwards;
}
#quote{
    font-size: 20px;
    color: white;
    text-align: center;
    margin-top: 10px;
    border: none;
    font-weight: bolder;
}
.form{
    width: 100%;
    height: 80%;
    border: none;
    background: transparent; 
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
}
label{
    font-size: larger;
    font-weight: bolder;
    margin-top: 10px;
    margin-bottom: 5px;
    margin-left: 7px;
    color: white;
}
.Transport{
    margin-top: 20px; 
    width: 80%;
    height: 10%;
    align-self: center;
    border: none;
    text-align: left;
    font-weight: bolder;    
    color: black;
}
.Transport::placeholder{
    text-align: center;
    font-style: italic;
    font-weight: bolder;
    
    border:none;
}
.vehicledetails{
    border: 1px solid black;
    color: white;
    width: 70%;
    height: 20%;
    border-radius: 20px;
    align-self: center;
    margin-top: 10px;
    font-size: medium;
    text-align: center;
    font-style: italic;
    font-weight: bolder;
    background-color: rgba(219, 188, 147, 0.973);
}
.space{
    width: 100%;
    height: 20%;
    background: transparent;
}
.video-space{
    width: 100%;
    height: 70%;
    background:transparent;
    display: flex;
    /* align-items: center; */
    justify-content: center;
}
.video-block{
    width: 80%;
    height: 100%;
    /* background-color: bisque; */
}
.book-video-text{
    width: 100%;
    height: 30%;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    
    h1{
        color: black;
        font-weight: bolder;
        font-style: oblique;
        font-size: 50px;
    }
    h3{
        color: black;
        /* font-weight: bolder; */
        font-style: oblique;
        font-size: 25px;
    }
}
.supportive-block-for-video{
    width: 100%;
    height: 70%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
.actual-video{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    iframe{
        width: 110%;
        height: 90%;
    }
}
.steps-in-video{
    width: 90%;
    height: 110%;
    /* background-color: black; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    h2{
        color: white;
    }
}
.steps{
    width: 85%;
    height: 30%;
    display: flex;
    flex-direction: row;
    /* background-color: blue; */
    /* border: 1px solid white; */
}
.icon{
    width: 30%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.og-icon{
    width: 70px;
    height: 70px;
    border-radius: 50%;
    /* background-color: aliceblue; */
    display: flex;
    justify-content: center;
    align-items: center;
}
.content{
    display: flex;
    width: 70%;
    height: 100%;
    flex-direction: column;
    justify-content: space-evenly;    
}
.content-heading{
    font-size: 30px;
    color: white;
    font-weight: bolder;
}
.reviews{
    margin-top: 5%;
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.inner-review{
    width: 90%;
    height: 95%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.review-heading{
    width: 100%;
    height: 30%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.review-heading h1{
    font-weight: bolder;
    font-style: italic;
    
}
.review-background{
    width: 100%;
    height: 100%;
    display: flex;
}
.scroller{
    width: 25%;
    height: 100%;
    display: flex;
    align-items: center;
    
}
.scroller-left{
    justify-content: flex-end;
}
.fa-arrow-left{
    margin-right: 50px;
    font-weight: bolder;
    font-size: 75px;  
    cursor: pointer; 
    transition: color 0.3s ease;  
 
}
.fa-arrow-right{
    margin-left: 50px;
    font-weight: bolder;
    font-size: 75px;  
    transition: color 0.3s ease;  
    cursor: pointer; 

}
.middle{
    width: 50%;
    height: 100%;
    display: flex;
    align-items: center;
    overflow: hidden;
    padding: 10px;
    box-sizing: border-box;
    
}

.middle-inner-box{
    width: 85%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    gap: 40px;
    transition: transform 0.4s ease;
   
}

.actual-review-box{
    min-width: 100%;
    height: 85%;
    background-color: whitesmoke;
    flex-shrink: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    font-size: 30px;
    color: white;      
}
.company-name-and-stars{
    width: 40%;
    height: 100%;
    display: flex;
    flex-direction: column;
}
.company-name{
    width: 100%;
    height: 50%;
    display: flex;
    font-size: 20px;
    color: blue;
    text-align: center;
    background-color: lightgrey;

}
.stars{
    height: 50%;
    background-color: lightgrey;
}

#left-arrow{
    color: grey;
}



/*Tablet */
@media (max-width: 992px) {
    .picedit {
        flex-direction: column;
        align-items: flex-start;
    }

    .box {
        width: 100%;
        max-width: 500px;
    }

    .maindropdowns {
        justify-content: flex-start;
    }
    /* .video-block{
        display: flex;
        flex-direction: column;
    } */
    .supportive-block-for-video{
        display: flex;
        flex-direction: column;
    }
    .book-video-text{
        height: 100%;
        width: 100%;
        display: block;
        h1{
            font-size: medium;
        }
        h3{

            font-size:small;
        }
}
}
/* Mobile */
@media (max-width: 600px) {
    .main {
        flex-direction: column;
    }

    .elements {
        justify-content: center;
    }

    .PLC {
        padding: 10px;
    }

    .maindropdowns {
        flex-direction: row;
        align-items: flex-start;
        gap: 4px;
    }
    .dropdowns{
        display: flex;
        justify-content: center;
        align-items: center;
        justify-content: center;
        width: 25%;
        height: 100%;
        font-size: medium;
    }
    .fa-angle-down{
        display: none;

    }

    .backgroundimg {
        padding: 20px 15px;
    }

    .verticaltext {
        font-size: 1.8rem;
    }

    .extratext {
        font-size: 1rem;
    }

    #quote {
        font-size: 1.1rem;
    }
    .movingtext{
    display:none;  
    } 
    .elements{
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
    .list{
        width: 25%;
        height: 100%;
    }
    #quote{
        color: white;
    }
    .text{
        display: none;
    }
    .video-block{ 
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        
    }
    .supportive-block-for-video{
        display: flex;
        flex-direction: column;
        margin-top: 20px;
    }
    .book-video-text{
        height: 100%;
        width: 100%;
        display: block;
        h1{
            font-size: medium;
        }
        h3{

            font-size:small;
        }
        

    }
}
@media (max-width:400px){
    .main {
        flex-direction: column;
    }

    .elements {
        justify-content: center;
    }

    .PLC {
        padding: 10px;
    }

    .maindropdowns {
        flex-direction: row;
        align-items: flex-start;
        gap: 4px;
    }

    .dropdowns {
        width: 100%;
        justify-content: flex-start;
        padding: 8px 0;
    }

    .backgroundimg {
        padding: 20px 15px;
    }

    .verticaltext {
        font-size: 1.8rem;
    }

    .extratext {
        font-size: 1rem;
    }

    #quote {
        font-size: 1.1rem;
    }
    .movingtext{
    display:none;  
    } 
    .elements{
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
    .list{
        width: 25%;
        height: 100%;
    }
    #quote{
        color: white;
    }
    .text{
        display: none;
    }
    .video-block{ 
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        
    }
    .supportive-block-for-video{
        display: flex;
        flex-direction: column;
        margin-top: 20px;
    }
    .book-video-text{
        height: 100%;
        width: 100%;
        display: block;
    }

    .book-video-text h1{
            font-size: medium;
        }
    .book-video-text h3{

            font-size:small;
        }
        .actual-video{
            display: none;
        }
    .steps{
        display: flex;
        width: 100%;
        height: 100%;
        flex-wrap: wrap-reverse;
    }  
    .hello{
        font-size: 20px;
    }  
    .dropdowns{
        display: flex;
        justify-content: center;
        align-items: center;
        justify-content: center;
        width: 25%;
        height: 100%;
        font-size: medium;
    }
    .fa-angle-down{
        display: none;

    }

    }

